--- a/index.html
+++ b/index.html
@@ -1,47 +1,68 @@
-<section class="grid">
+</ul>
+      <p class="muted">All digital access and instructions are delivered by email and/or the platform (Gumroad or Telegram) immediately after payment.</p>
+    </section>
+
+    <section class="grid">
       <div class="card">
-        <h3>Refunds & Cancellation</h3>
-        <p class="small"><strong>Book refunds:</strong> Handled according to Gumroad's refund policy displayed on the Gumroad product page. If a refund is requested within Gumroad's refund window, we will follow Gumroad procedures.</p>
-        <p class="small" style="margin-top:8px;"><strong>Subscription refunds:</strong> Members may cancel subscriptions at any time. Refund requests for subscription payments are handled case-by-case; our standard policy is to consider refund requests within 14 days of purchase, except where local laws require otherwise.</p>
+        <h3>Refunds & returns</h3>
+        <p><strong>Book refunds:</strong> Handled according to Gumroad's refund policy shown on the Gumroad product page.</p>
+        <p style="margin-top:8px"><strong>Subscription refunds:</strong> Customers may cancel subscriptions at any time. Refund requests for subscription charges are handled case-by-case; our standard consideration window is 14 days from purchase unless local consumer law requires otherwise. Chargebacks and disputes are processed according to Stripe's chargeback procedures.</p>
       </div>
 
       <div class="card">
-        <h3>Data & Privacy</h3>
-        <p class="small">We collect minimal personal data required to deliver digital access: name and email address. We do not sell customer personal data. Full privacy policy and terms are available on request.</p>
+        <h3>Data & privacy</h3>
+        <p>We collect only the minimal personal data required to deliver digital access: name and email address. We do not sell customer data. Full privacy policy and terms are available upon request.</p>
       </div>
+    </section>
+
+    <section>
+      <h2>Proof & product links</h2>
+      <p>Book on Gumroad (product page):</p>
+      <p><a class="cta" href="https://salesacademys.gumroad.com/l/decqg" target="_blank" rel="noopener noreferrer">Open book on Gumroad</a></p>
+      <p class="muted">Gumroad product page includes the complete description, delivery details and the refund policy for the book.</p>
+    </section>
+
+    <section>
+      <h2>How customers join the Telegram club</h2>
+      <ol>
+        <li>Customer completes subscription purchase (Stripe).</li>
+        <li>System sends confirmation email with instructions.</li>
+        <li>Customer receives an invite link to the private Telegram group and gains access to members-only materials.</li>
+      </ol>
+      <p class="muted">If Telegram club is not yet opened at the moment of review, access will be provided as soon as the group is launched; customers are informed of launch timelines in the purchase confirmation.</p>
     </section>
 
     <section>
       <h2>Contact</h2>
-      <p class="small">For questions, verification or support please contact:</p>
-      <p class="small"><strong>Email:</strong> <a href="mailto:hello.website.org@gmail.com">hello.website.org@gmail.com</a></p>
-      <p class="muted">Please use this email for payment provider verification, chargeback inquiries or customer support.</p>
+      <p>Primary contact for verification and support:</p>
+      <p><strong>Email:</strong> <a href="mailto:hello.website.org@gmail.com">hello.website.org@gmail.com</a></p>
+      <p class="muted">Use this email for payment provider verification, chargeback inquiries, and customer support.</p>
     </section>
 
     <section>
-      <h2>Suggested fields for Stripe (copy-paste)</h2>
+      <h2>Suggested fields for Stripe (copy & paste)</h2>
 
-      <h4>Statement descriptor (what appears on customer's bank statement):</h4>
+      <h4>Statement descriptor (appears on customer's bank statement):</h4>
       <pre>SALES ACADEMY</pre>
       <p class="muted">Use all caps, 5–22 characters, latin letters and spaces only.</p>
 
       <h4 style="margin-top:12px;">Business description (for Stripe 'Business description' field):</h4>
       <pre>Paid subscription access to a private Telegram club and a digital book that teach professional sales techniques. Members receive live and recorded lessons, templates, scripts and community support. Delivery: digital (Telegram invite and book download).</pre>
-      <p class="muted">Copy this exact text into Stripe's Business description to speed up verification.</p>
+      <p class="muted">Copy this exact text into Stripe's Business description to provide a clear summary for verification.</p>
     </section>
 
     <section>
-      <h2>Notes for payment reviewers</h2>
-      <ul class="small">
-        <li>The Gumroad product page linked above contains the full description of the book, digital delivery details and Gumroad's refund policy.</li>
-        <li>Telegram access is provided via invite link after payment. Delivery is digital only.</li>
-        <li>Contact email for verification: <strong>hello.website.org@gmail.com</strong></li>
-        <li>We use Stripe for subscription payments and Gumroad for the book sales.</li>
+      <h2>Notes for reviewers</h2>
+      <ul>
+        <li>The Gumroad product page linked above contains full book description, delivery instructions and Gumroad's refund policy.</li>
+        <li>Telegram access is digital and provided via invite link after successful payment.</li>
+        <li>Contact email for verification and support: <strong>hello.website.org@gmail.com</strong>.</li>
+        <li>Payments for subscriptions are processed via Stripe; book sales are processed via Gumroad.</li>
       </ul>
     </section>
 
     <footer>
-      <p class="muted">This is a static verification page intended to be used as the website URL in payment provider settings. Publish this page on GitHub Pages (https://<your-username>.github.io/<repo>/) and provide that URL to Stripe. Replace any placeholder links or texts with your official values when available.</p>
+      <p class="muted">This static page is intended to be published as the public business URL for payment provider verification (for example via GitHub Pages). Ensure the published URL is accessible and that the contact email is monitored during verification.</p>
     </footer>
   </main>
 </body>
