Refactor index.html for clarity and structure

--- a/index.html
+++ b/index.html
@@ -1,69 +1,34 @@
-</ul>
-      <p class="muted">All digital access and instructions are delivered by email and/or the platform (Gumroad or Telegram) immediately after payment.</p>
-    </section>
+<section style="margin-top:18px">
+        <div class="card">
+          <h2>Suggested fields for Stripe (copy & paste)</h2>
 
-    <section class="grid">
-      <div class="card">
-        <h3>Refunds & returns</h3>
-        <p><strong>Book refunds:</strong> Handled according to Gumroad's refund policy shown on the Gumroad product page.</p>
-        <p style="margin-top:8px"><strong>Subscription refunds:</strong> Customers may cancel subscriptions at any time. Refund requests for subscription charges are handled case-by-case; our standard consideration window is 14 days from purchase unless local consumer law requires otherwise. Chargebacks and disputes are processed according to Stripe's chargeback procedures.</p>
-      </div>
+          <h3 style="margin-top:8px;font-size:14px">Statement descriptor (what appears on customer's bank statement):</h3>
+          <pre>SALES ACADEMY</pre>
+          <p class="muted">Use all caps; 5–22 characters; latin letters and spaces only.</p>
 
-      <div class="card">
-        <h3>Data & privacy</h3>
-        <p>We collect only the minimal personal data required to deliver digital access: name and email address. We do not sell customer data. Full privacy policy and terms are available upon request.</p>
-      </div>
-    </section>
+          <h3 style="margin-top:12px;font-size:14px">Business description (for Stripe 'Business description' field):</h3>
+          <pre>Paid subscription access to a planned private Telegram club and a digital book that teach professional sales techniques. Members receive live and recorded lessons, templates, scripts and community support. Delivery: digital (Telegram invite and book download).</pre>
+          <p class="muted">Copy this exact text into Stripe's Business description to provide a concise summary for verification.</p>
+        </div>
+      </section>
 
-    <section>
-      <h2>Proof & product links</h2>
-      <p>Book on Gumroad (product page):</p>
-      <p><a class="cta" href="https://salesacademys.gumroad.com/l/decqg" target="_blank" rel="noopener noreferrer">Open book on Gumroad</a></p>
-      <p class="muted">Gumroad product page includes the complete description, delivery details and the refund policy for the book.</p>
-    </section>
+      <section style="margin-top:18px">
+        <div class="card">
+          <h2>Notes for reviewers</h2>
+          <ul class="list">
+            <li>The Gumroad product page linked above contains the full book description, digital delivery details and Gumroad's refund policy.</li>
+            <li>Telegram club is planned and will be launched; customers are informed about access timelines at purchase.</li>
+            <li>Contact email for verification and support: <strong>hello.website.org@gmail.com</strong>.</li>
+            <li>Book sales are processed via Gumroad; subscription payments will be processed via Stripe.</li>
+          </ul>
+        </div>
+      </section>
 
-    <section>
-      <h2>How customers join the Telegram club</h2>
-      <ol>
-        <li>Customer completes subscription purchase (Stripe).</li>
-        <li>System sends confirmation email with instructions.</li>
-        <li>Customer receives an invite link to the private Telegram group and gains access to members-only materials.</li>
-      </ol>
-      <p class="muted">If Telegram club is not yet opened at the moment of review, access will be provided as soon as the group is launched; customers are informed of launch timelines in the purchase confirmation.</p>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <p>Primary contact for verification and support:</p>
-      <p><strong>Email:</strong> <a href="mailto:hello.website.org@gmail.com">hello.website.org@gmail.com</a></p>
-      <p class="muted">Use this email for payment provider verification, chargeback inquiries, and customer support.</p>
-    </section>
-
-    <section>
-      <h2>Suggested fields for Stripe (copy & paste)</h2>
-
-      <h4>Statement descriptor (appears on customer's bank statement):</h4>
-      <pre>SALES ACADEMY</pre>
-      <p class="muted">Use all caps, 5–22 characters, latin letters and spaces only.</p>
-
-      <h4 style="margin-top:12px;">Business description (for Stripe 'Business description' field):</h4>
-      <pre>Paid subscription access to a private Telegram club and a digital book that teach professional sales techniques. Members receive live and recorded lessons, templates, scripts and community support. Delivery: digital (Telegram invite and book download).</pre>
-      <p class="muted">Copy this exact text into Stripe's Business description to provide a clear summary for verification.</p>
-    </section>
-
-    <section>
-      <h2>Notes for reviewers</h2>
-      <ul>
-        <li>The Gumroad product page linked above contains full book description, delivery instructions and Gumroad's refund policy.</li>
-        <li>Telegram access is digital and provided via invite link after successful payment.</li>
-        <li>Contact email for verification and support: <strong>hello.website.org@gmail.com</strong>.</li>
-        <li>Payments for subscriptions are processed via Stripe; book sales are processed via Gumroad.</li>
-      </ul>
-    </section>
-
-    <footer>
-      <p class="muted">This static page is intended to be published as the public business URL for payment provider verification (for example via GitHub Pages). Ensure the published URL is accessible and that the contact email is monitored during verification.</p>
-    </footer>
+      <footer>
+        <div class="muted">This static verification page is intended to be published as your public business URL (for example via GitHub Pages). Make sure the published URL is accessible and that the contact email is monitored during verification.</div>
+      </footer>
+    </div>
   </main>
 </body>
 </html>
+`0
