Update index.html for improved content structure

--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
-<section style="margin-top:18px">
-        <div class="card">
-          <h2>Suggested fields for Stripe (copy & paste)</h2>
-
-          <h3 style="margin-top:8px;font-size:14px">Statement descriptor (what appears on customer's bank statement):</h3>
-          <pre>SALES ACADEMY</pre>
-          <p class="muted">Use all caps; 5–22 characters; latin letters and spaces only.</p>
-
-          <h3 style="margin-top:12px;font-size:14px">Business description (for Stripe 'Business description' field):</h3>
-          <pre>Paid subscription access to a planned private Telegram club and a digital book that teach professional sales techniques. Members receive live and recorded lessons, templates, scripts and community support. Delivery: digital (Telegram invite and book download).</pre>
-          <p class="muted">Copy this exact text into Stripe's Business description to provide a concise summary for verification.</p>
+<div class="card" style="padding:18px;">
+          <h2 style="margin-top:0;margin-bottom:8px;">Book link</h2>
+          <p class="muted" style="margin-bottom:12px">Official product page (digital book):</p>
+          <p><a class="btn" href="https://salesacademys.gumroad.com/l/decqg" target="_blank" rel="noopener noreferrer">Open book on Gumroad</a></p>
         </div>
       </section>
 
-      <section style="margin-top:18px">
-        <div class="card">
-          <h2>Notes for reviewers</h2>
-          <ul class="list">
-            <li>The Gumroad product page linked above contains the full book description, digital delivery details and Gumroad's refund policy.</li>
-            <li>Telegram club is planned and will be launched; customers are informed about access timelines at purchase.</li>
-            <li>Contact email for verification and support: <strong>hello.website.org@gmail.com</strong>.</li>
-            <li>Book sales are processed via Gumroad; subscription payments will be processed via Stripe.</li>
-          </ul>
+      <section class="section">
+        <div class="card" style="padding:18px;">
+          <h2 style="margin-top:0;margin-bottom:8px;">Refunds & cancellations</h2>
+          <p class="muted">Book refunds follow Gumroad's published refund policy on the product page. Subscription refunds (for the planned Telegram club) will be considered case-by-case; customers may cancel subscriptions at any time.</p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="card" style="padding:18px;">
+          <h2 style="margin-top:0;margin-bottom:8px;">Contact</h2>
+          <div class="contact">
+            <div class="chip" title="Email">hello.website.org@gmail.com</div>
+          </div>
+          <p class="muted" style="margin-top:10px">Use this email for verification, support or official inquiries. The address is monitored during verification.</p>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="card" style="padding:18px;">
+          <h2 style="margin-top:0;margin-bottom:8px;">Short summary (for reviewers)</h2>
+          <p class="muted" style="margin-bottom:10px">
+            Sales Academy sells a digital book teaching practical sales techniques. A private paid Telegram club is planned. The book is available on Gumroad: the product page contains delivery and refund details. Contact: hello.website.org@gmail.com
+          </p>
+          <pre aria-hidden="true">Book: https://salesacademys.gumroad.com/l/decqg
+Contact: hello.website.org@gmail.com</pre>
         </div>
       </section>
 
       <footer>
-        <div class="muted">This static verification page is intended to be published as your public business URL (for example via GitHub Pages). Make sure the published URL is accessible and that the contact email is monitored during verification.</div>
+        <div class="muted">This page is a public information page intended for payment-provider verification. It contains only factual information about the product, delivery and contact.</div>
       </footer>
     </div>
   </main>
