--- a/index.html
+++ b/index.html
@@ -1,43 +1,26 @@
-<div class="card" style="padding:18px;">
-          <h2 style="margin-top:0;margin-bottom:8px;">Book link</h2>
-          <p class="muted" style="margin-bottom:12px">Official product page (digital book):</p>
-          <p><a class="btn" href="https://salesacademys.gumroad.com/l/decqg" target="_blank" rel="noopener noreferrer">Open book on Gumroad</a></p>
+<div class="block" aria-labelledby="refunds">
+          <h4 id="refunds">Refunds</h4>
+          <p class="muted-sm">Book refunds follow Gumroad's published refund policy on the product page. Subscription refunds will be considered case-by-case; cancellation possible at any time.</p>
         </div>
-      </section>
 
-      <section class="section">
-        <div class="card" style="padding:18px;">
-          <h2 style="margin-top:0;margin-bottom:8px;">Refunds & cancellations</h2>
-          <p class="muted">Book refunds follow Gumroad's published refund policy on the product page. Subscription refunds (for the planned Telegram club) will be considered case-by-case; customers may cancel subscriptions at any time.</p>
+        <div class="block" aria-labelledby="contact">
+          <h4 id="contact">Contact</h4>
+          <p class="muted-sm">Email: <a href="mailto:hello.website.org@gmail.com" style="color:var(--accent);text-decoration:none">hello.website.org@gmail.com</a></p>
+          <p class="muted-sm" style="margin-top:6px">Instagram: <a href="https://www.instagram.com/_sales.core_?igsh=ems3MjRxbG90ZWhm" target="_blank" rel="noopener noreferrer" style="color:var(--accent);text-decoration:none">@_sales.core_</a></p>
         </div>
-      </section>
 
-      <section class="section">
-        <div class="card" style="padding:18px;">
-          <h2 style="margin-top:0;margin-bottom:8px;">Contact</h2>
-          <div class="contact">
-            <div class="chip" title="Email">hello.website.org@gmail.com</div>
-          </div>
-          <p class="muted" style="margin-top:10px">Use this email for verification, support or official inquiries. The address is monitored during verification.</p>
+        <div class="block" aria-labelledby="links">
+          <h4 id="links">Official product page</h4>
+          <p class="muted-sm">Digital book on Gumroad:</p>
+          <p style="margin-top:8px"><a class="btn" href="https://salesacademys.gumroad.com/l/decqg" target="_blank" rel="noopener noreferrer">Open book on Gumroad</a></p>
         </div>
-      </section>
+      </div>
 
-      <section class="section">
-        <div class="card" style="padding:18px;">
-          <h2 style="margin-top:0;margin-bottom:8px;">Short summary (for reviewers)</h2>
-          <p class="muted" style="margin-bottom:10px">
-            Sales Academy sells a digital book teaching practical sales techniques. A private paid Telegram club is planned. The book is available on Gumroad: the product page contains delivery and refund details. Contact: hello.website.org@gmail.com
-          </p>
-          <pre aria-hidden="true">Book: https://salesacademys.gumroad.com/l/decqg
-Contact: hello.website.org@gmail.com</pre>
-        </div>
-      </section>
-
-      <footer>
-        <div class="muted">This page is a public information page intended for payment-provider verification. It contains only factual information about the product, delivery and contact.</div>
-      </footer>
+      <div class="footer">
+        <div class="small">Sales Academy — digital sales training.</div>
+        <div class="small">Contact: <a href="mailto:hello.website.org@gmail.com" style="color:var(--accent);text-decoration:none">hello.website.org@gmail.com</a></div>
+      </div>
     </div>
   </main>
 </body>
 </html>
-`0
